# optimus

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: deploy-production.yml
Outputs/: demo-builder-template.html
backend/: server.js
backend_py/: pyproject.toml
backend_py/optimus_api/: __init__.py  catalog.py  config.py  domain.py  knowledge.py  main.py  store.py  tools.py  utils.py  versioning.py
backend_py/sql/: 001_init.sql
backend_py/tests/: test_csv_qa_markdown.py  test_document_markdown.py  test_knowledge_parser.py  test_version_metadata.py
data/: olympiacos-news.json  tool-catalog.json
docs/: api.md  architecture.md  configuration.md  database.md  local-development.md  overview.md
docs/operations/: backup-restore.md  deployment.md  troubleshooting.md
docs/tools/: README.md  betlog.md  demo-builder.md  knowledge-expert.md  notelog.md  padelog.md  presentation-suite.md  tool-catalog.md  utilities.md
frontend/: app.js  index.html  server.js  styles.css
frontend-react/: index.html  vite.config.mjs
frontend-react/src/: main.jsx  react.css  styles.css
scripts/: deploy-prod.sh  dev.js  optimus
