[project]
name = "optimus-api"
version = "6.3.1"
description = "FastAPI backend for Optimus."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "psycopg[binary,pool]>=3.2.0",
  "pypdf>=6.0.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["optimus_api*"]

[tool.ruff]
line-length = 120
target-version = "py310"
